--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Year
             </div>
         </div>
-        <img src="pictures/rfj.jpg" id="image">
+        <img src="https://photos.app.goo.gl/JVXwVd7qfEHC8AF67" id="image">
     </body>
     <script src="script.js"></script>
     
