--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Year
             </div>
         </div>
-        <img src="./pictures/rfj.jpg" id="image">
+        <img src="/pictures/rfj.jpg" id="image">
     </body>
     <script src="script.js"></script>
     
