--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Year
             </div>
         </div>
-        <img src="/pictures/rfj.jpg" id="image">
+        <img src="https://lh3.googleusercontent.com/pw/AJFCJaUwPyTQPiWyVa8wzAJvl0j84jNks-g7aWnYF7nMH-RLAweQX-zFSEcY8Q3EJ_CJKbna2WaD3H7N15pD4oKTyRD9iFvJjdrhevEoxu5FZGiGmpJb19Ad32dvH126a53Wd4GF-bG6vx2Y48gD_YukVVuIL86iewarOxHM52TOJwKsVCzoeRe2m443owNScBDX97w6L6fKg-pYERilylX4L_o-25i0ihx_njdnswBHcKSsXOGyFx9RTqNnTpuuS9R_CxBN6EmPyMV_wsgx9a0qyVmQKw9wWk2HQeMQI53MzS69xzVa0uN6Az_qPODAdATvw6cFUAqP-hf1J9LaAsutcDPpw44zltkFSAGGJaB4YaKHm-psLofT7E2giceUrVglUxl-9qSoohhgmEf3CkR6TylyxddnQEIGORgJtSoe7E2DlffBD16tTWExmpgahdoPdklju_DH68c15_aSvF1wK9fSDlA58OvMWzuN_bNH_8q0rwIThNymqmNr8mPF62nfzpLzrFjjQGrXVBCjHuevrh1e85SjrYeJYPYrtuVDf_E6k-7yfVf_euH34MO2fLgtbpbLHhAWS0U8vrmfKCrpDuHIxNlRxKS0OsikQBccxuZvAQ3ZUU9l90bMR7_tfkAw1Mz8bfsizvw4hFPKRV6ZCxVrT5kcGkkC4iuS6xlNygxwS-reguZsQMUd_lc8UBDQVUGz7173V5244f7OWC4htjocjRF5dIEBNnDhtQzEWM-FJuEMaTgGpCq0jORx6FVjF920N7KcVq8Scq00vWBa-YZ9ENhWZjDs4Z6hdA3qKe5-wKN--l6xFst9nIIHKHiZmK6rlbsiXDkQyutdxJF6gqiRoHMi0-T5YUf8qV6YIu9K4khWT6t3n7lFtoegrl2Yh_k2hDAWinWrt_3OjRqmO7Z3KIy0ElQpGkq0MQHtxZ2eDhZ-s3hhU36nhhtNdw=w749-h749-s-no?authuser=0" id="image">
     </body>
     <script src="script.js"></script>
     
